--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 node_modules
+"Authorization" : "Client-ID" 
+"Client-ID" : "cca4d8346d898fe"
+"Client_Secret" : "cca4d8346d898fe"
+"pin" : "bf7d065e50"
+"access_token" : "72812c2e8dc68ddb7877d81c7d8c3b082a6a33e8"
+"refresh_token" : "b6e0d00b91ad25bf5b86b3cb989778b12e970982"
+
